--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "deck.gl": "^9.2.6",
+    "fast-xml-parser": "^5.3.3",
     "mapbox-gl": "^3.18.1",
     "maplibre-gl": "^5.16.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-map-gl": "^8.1.0"
+    "react-map-gl": "^8.1.0",
+    "recharts": "^3.7.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
