--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "deck.gl": "^9.2.6",
     "fast-xml-parser": "^5.3.3",
     "mapbox-gl": "^3.18.1",
     "maplibre-gl": "^5.16.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-map-gl": "^8.1.0",
     "recharts": "^3.7.0",
