--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
+    "chartjs-plugin-annotation": "^3.1.0",
     "deck.gl": "^9.2.6",
     "fast-xml-parser": "^5.3.3",
     "mapbox-gl": "^3.18.1",
