--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-plugin-dragdata": "^2.3.1",
     "deck.gl": "^9.2.6",
     "fast-xml-parser": "^5.3.3",
     "mapbox-gl": "^3.18.1",
